Integration for exports accordion

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Eagle AI",
-  "name": "Eagle AI LLC Frontend",
+  "short_name": "SynaptiVoice",
+  "name": "SynaptiVoice Frontend",
   "icons": [
     {
       "src": "favicon.ico",
