Refactor Free trial and Reocrding detail page

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # Environment variables
 REACT_APP_USERNAME=admin
 REACT_APP_PASSWORD=password123
+VITE_CLERK_PUBLISHABLE_KEY=pk_test_c2V0LWNsYW0tNTMuY2xlcmsuYWNjb3VudHMuZGV2JA
