Clean environment files and remove API keys

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,11 @@
 # Environment variables
 REACT_APP_USERNAME=admin
 REACT_APP_PASSWORD=password123
+
+# Clerk Configuration (Replace with your actual keys)
+VITE_CLERK_PUBLISHABLE_KEY=pk_test_your_clerk_publishable_key_here
+REACT_APP_CLERK_PUBLISHABLE_KEY=pk_test_your_clerk_publishable_key_here
+
+# Stripe Configuration (Replace with your actual test keys)
+REACT_APP_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
