--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "http-proxy-middleware": "^2.0.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
@@ -68,6 +69,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "https://speechai-api.ngrok.dev",
   "browserslist": {
     "production": [
       ">0.2%",
