--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@clerk/clerk-react": "^5.47.0",
+    "@emailjs/browser": "^4.4.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-avatar": "^1.0.3",
@@ -38,6 +39,7 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.29.0",
     "dotenv": "^16.0.1",
+    "http-proxy-middleware": "^2.0.6",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
@@ -49,8 +51,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4",
-    "http-proxy-middleware": "^2.0.6"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
